# jax

./: .bazelrc  .gitignore  WORKSPACE  build.sh  build_cuda.sh  install.sh  install_cuda.sh
examples/ffi/: build.sh
examples/ffi/src/jax_ffi_example/: cuda_examples.cu  cuda_examples.py
jax/_src/: xla_bridge.py
jax_plugins/ascend/: BUILD.bazel  __init__.py  ascend_version_script.lds  ffi_ops.py  plugin_setup.py  pyproject.toml  setup.py
jax_test/: run_matmul_bias.py  run_simply.py  run_simply_no_pool.py  test_ffi.py  test_ffi_gelu.py  test_ffi_matmul.py  test_ffi_matmul_gelu.py  test_ffi_parallel.py  test_ffi_parallel_01.py  test_ffi_parallel_02.py  test_ffi_parallel_03.py  test_fusion.py  test_jax.py  test_jnp.py
jax_test/aclnn_test/: CMakeLists.txt  make.sh  test_aclnn_matmul.cpp
jax_test/cifar10/: resnet18_cifar10.py  resnet18_cifar10_single_block.py
jax_test/conv/: conv_net.py
jax_test/mnist/: README.md  data.py  model.py  print_update_hlo.py  train.py
jax_test/tool/: compare_ir_files.py
jaxlib/: jax.bzl  jax.cc
jaxlib/ascend/: BUILD  ascend_configure.bzl  ascend_plugin_extension.cc  versions.cc  versions_helpers.cc  versions_helpers.h
jaxlib/tools/: BUILD.bazel  build_ascend_plugin_wheel.py  build_utils.py
